--- a/exercises/url-parser/url-parser.html
+++ b/exercises/url-parser/url-parser.html
@@ -5,36 +5,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL Parser Exercise</title>
+    <link href="styles/styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <section class="parser">
+    <section class="container mt-5">
+    <section class="parser-container rounded shadow-sm p-4 mx-auto">
         <h1 class="parser-title">URL Parser</h1>
         <div>
-            <form class="parser-form">
-                <div class="parser-form-input-container">
+            <form class="parser-form mt-3">
+                <div class="parser-form-input-container ">
                     <label for="url-input-format" class="parser-form__input-format-label">Enter the URL format:</label>
-                    <input id="url-input-format" type="text" class="parser-form__input-format" />
+                    <input id="url-input-format" aria-label="/:version/api/:collection/:id" placeholder="/:version/api/:collection/:id" type="text" class="parser-form__input-format form-control mt-1 mb-3" />
                 </div>
                 <div class="parser-form-input-container">
                     <label for="url-input" class="parser-form__input-label">Enter the URL that you want to
                         parse:</label>
-                    <input id="url-input" type="text" class="parser-form__input" />
+                    <input id="url-input" type="text" aria-label="/6/api/listings/3?sort=desc&limit=10" placeholder="/6/api/listings/3?sort=desc&limit=10" class="parser-form__input form-control mt-1 mb-3" />
                 </div>
-                <button type="submit" aria-label="Parse the provided URL" class="parser-form__button">
+                <button type="submit" aria-label="Parse the provided URL" class="parser-form__button btn btn-primary">
                     Parse URL
                 </button>
             </form>
         </div>
     </section>
-    <section class="results">
-        <h2 class="results__title">Parsing Results</h2>
+    <section class="results mt-3">
+        <h2 class="results__title text-center d-none">Results:</h2>
+        <div id="liveAlertPlaceholder"></div>
         <div class="results__content"></div>
     </section>
-    <section class="alert">
-        <div class="alert-tooltip"></div>
-    </section>
-    <script src="/exercises/url-parser/js/app.js"></script>
+</section>
+    <script src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
