--- a/exercises/zoo/index.html
+++ b/exercises/zoo/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/styles.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles/styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <title>Zoo exercise</title>
 </head>
 
 <body>
     <section class="container zoo-header">
-        <h1 class="zoo-title">Animal Zoo</h1>
+        <h1 class="zoo-title mt-3">Animal Zoo</h1>
     </section>
     <main>
         <section class="container">
@@ -20,24 +20,24 @@
                 <div class="zoo-form-input-container">
                     <label for="animal" class="zoo-form__input-animal-list">Select the animal you want to speak:
                     </label>
-                    <select class="zoo-form__select form-select" id="animal" aria-label="animal-list">
-                    </select>
-                    <div class="zoo-form-input-container">
-                        <label for="phrase" class="zoo-form__input-phrase">Select the phrase you want the animal to say: </label>
-                        <input id="phrase" type="text" aria-label="Im a good lion" placeholder="Im a good lion"
-                            class="zoo-form__input form-control mt-1 mb-3" />
-                    </div>
-                    <button type="submit" aria-label="Make the Animal Speak" class="zoo-form__button btn btn-success">
-                        Make the Animal Speak
-                    </button>
+                    <select class="zoo-form__select form-select" id="animal" aria-label="animal-list"></select>
+                </div>
+                <div class="zoo-form-input-container">
+                    <label for="phrase" class="zoo-form__input-phrase">Select the phrase you want the animal to say:
+                    </label>
+                    <input id="phrase" type="text" aria-label="Im a good tiger" placeholder="Im a good tiger"
+                        class="zoo-form__input form-control mt-1 mb-3" />
+                </div>
+                <button type="submit" aria-label="Make the Animal Speak" class="zoo-form__button btn btn-dark">
+                    Make the Animal Speak
+                </button>
             </form>
         </section>
     </main>
-            <section class="container mt-5">
-                <h2 class="text-center">Results</h2>
-                <div id="results-container" class="results-container mt-3">
-                </div>
-            </section>
+    <section class="container mt-5">
+        <h2 class="results-title text-center d-none">Animal Talk</h2>
+        <div id="results-container" role="status" class="results-container mt-3"></div>
+    </section>
     <script src="js/app.js"></script>
 </body>
 
