zoo and parser autofocus added, lint and classes renamed

--- a/exercises/url-parser/index.html
+++ b/exercises/url-parser/index.html
@@ -17,7 +17,7 @@
             <form class="parser-form mt-3">
                 <div class="parser-form-input-container ">
                     <label for="url-input-format" class="parser-form__input-format-label">Enter the URL format:</label>
-                    <input id="url-input-format" aria-label="/:version/api/:collection/:id" placeholder="/:version/api/:collection/:id" type="text" class="parser-form__input-format form-control mt-1 mb-3" />
+                    <input id="url-input-format" autofocus aria-label="/:version/api/:collection/:id" placeholder="/:version/api/:collection/:id" type="text" class="parser-form__input-format form-control mt-1 mb-3" />
                 </div>
                 <div class="parser-form-input-container">
                     <label for="url-input" class="parser-form__input-label">Enter the URL that you want to
