--- a/exercises/zoo/index.html
+++ b/exercises/zoo/index.html
@@ -20,7 +20,7 @@
                 <div class="zoo-form-input-container">
                     <label for="animal" class="zoo-form__input-animal-list">Select the animal you want to speak:
                     </label>
-                    <select class="zoo-form__select form-select" id="animal" aria-label="animal-list"></select>
+                    <select autofocus class="zoo-form__select form-select" id="animal" aria-label="animal-list"></select>
                 </div>
                 <div class="zoo-form-input-container">
                     <label for="phrase" class="zoo-form__input-phrase">Select the phrase you want the animal to say:
